--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.39.0",
+        "cors": "^2.8.5",
         "discord.js": "^14.14.1",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
